# pyQVNCWidget6

./: .gitignore  README.md  pyproject.toml  requirements.txt  testing.py
examples/: 1minimal.py  2resizing.py  2widgetInput.py  4windowInput.py
qvncwidget/: qvncwidget.py
qvncwidget6/: __init__.py  qvncwidget6.py  rfb.py  rfbconstants.py  rfbhelpers.py
