[tool.poetry]
name = "QVncWidget6"
version = "0.1.0"
description = "VNC QT Widget for Python using PyQt6"
authors = ["zocker_160 <zocker1600@posteo.net>"]
license = "GPLv3+"
readme = "README.md"
repository = "https://github.com/ChileCris2011/pyQVNCWidget6"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.12.8"
service-identity = "^21.1.0"
pyDes = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
