[project]
name = "qvncwidget6"
version = "1.0.6"
description = "VNC Qt Widget for Python using PyQt6"
authors = [
    { name = "zocker_160", email = "zocker1600@posteo.net"},
    { name = "ThevianDex", email = "mekagpt+thevian@gmail.com"}
]
license = "GPLv3+"
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "PyQt6~=6.10",
    "service-identity~=21.1",
    "pyDes~=2.0"
]

[project.urls]
repository = "https://github.com/ChileCris2011/pyQVNCWidget6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
